PLHW2/PLhw2/y.output
Terminals unused in grammar

   INLINE


State 471 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT
    3                   | STRING_LITERAL

    4 $@1: %empty

    5 $@2: %empty

    6 primary_expression: '(' $@1 expression $@2 ')'

    7 postfix_expression: primary_expression

    8 $@3: %empty

    9 $@4: %empty

   10 postfix_expression: postfix_expression '[' $@3 expression $@4 ']'

   11 $@5: %empty

   12 postfix_expression: postfix_expression '(' $@5 ')'

   13 $@6: %empty

   14 $@7: %empty

   15 postfix_expression: postfix_expression '(' $@6 argument_expression_list $@7 ')'

   16 $@8: %empty

   17 postfix_expression: postfix_expression '.' $@8 IDENTIFIER

   18 $@9: %empty

   19 postfix_expression: postfix_expression PTR_OP $@9 IDENTIFIER
   20                   | postfix_expression INC_OP
   21                   | postfix_expression DEC_OP
   22                   | '(' type_name ')' '{' initializer_list '}'
   23                   | '(' type_name ')' '{' initializer_list ',' '}'

   24 argument_expression_list: assignment_expression

   25 $@10: %empty

   26 argument_expression_list: argument_expression_list ',' $@10 assignment_expression

   27 unary_expression: postfix_expression

   28 $@11: %empty

   29 unary_expression: INC_OP $@11 unary_expression

   30 $@12: %empty

   31 unary_expression: DEC_OP $@12 unary_expression
   32                 | unary_operator cast_expression
   33                 | subroutine8 SIZEOF unary_expression
   34                 | subroutine8 SIZEOF '(' type_name ')'

   35 subroutine8: %empty

   36 unary_operator: '&'
   37               | '*'
   38               | '+'
   39               | '-'
   40               | '~'
   41               | '!'

   42 cast_expression: unary_expression
   43                | '(' type_name ')' cast_expression

   44 multiplicative_expression: cast_expression

   45 $@13: %empty

   46 multiplicative_expression: multiplicative_expression '*' $@13 cast_expression

   47 $@14: %empty

   48 multiplicative_expression: multiplicative_expression '/' $@14 cast_expression

   49 $@15: %empty

   50 multiplicative_expression: multiplicative_expression '%' $@15 cast_expression

   51 additive_expression: multiplicative_expression

   52 $@16: %empty

   53 additive_expression: additive_expression '+' $@16 multiplicative_expression

   54 $@17: %empty

   55 additive_expression: additive_expression '-' $@17 multiplicative_expression

   56 shift_expression: additive_expression

   57 $@18: %empty

   58 shift_expression: shift_expression LEFT_OP $@18 additive_expression

   59 $@19: %empty

   60 shift_expression: shift_expression RIGHT_OP $@19 additive_expression

   61 relational_expression: shift_expression

   62 $@20: %empty

   63 relational_expression: relational_expression '<' $@20 shift_expression

   64 $@21: %empty

   65 relational_expression: relational_expression '>' $@21 shift_expression

   66 $@22: %empty

   67 relational_expression: relational_expression LE_OP $@22 shift_expression

   68 $@23: %empty

   69 relational_expression: relational_expression GE_OP $@23 shift_expression

   70 equality_expression: relational_expression

   71 $@24: %empty

   72 equality_expression: equality_expression EQ_OP $@24 relational_expression

   73 $@25: %empty

   74 equality_expression: equality_expression NE_OP $@25 relational_expression

   75 and_expression: equality_expression

   76 $@26: %empty

   77 and_expression: and_expression '&' $@26 equality_expression

   78 exclusive_or_expression: and_expression

   79 $@27: %empty

   80 exclusive_or_expression: exclusive_or_expression '^' $@27 and_expression

   81 inclusive_or_expression: exclusive_or_expression

   82 $@28: %empty

   83 inclusive_or_expression: inclusive_or_expression '|' $@28 exclusive_or_expression

   84 logical_and_expression: inclusive_or_expression

   85 $@29: %empty

   86 logical_and_expression: logical_and_expression AND_OP $@29 inclusive_or_expression

   87 logical_or_expression: logical_and_expression

   88 $@30: %empty

   89 logical_or_expression: logical_or_expression OR_OP $@30 logical_and_expression

   90 conditional_expression: logical_or_expression
   91                       | logical_or_expression '?' expression ':' conditional_expression

   92 assignment_expression: conditional_expression

   93 $@31: %empty

   94 $@32: %empty

   95 assignment_expression: unary_expression $@31 assignment_operator $@32 assignment_expression

   96 assignment_operator: '='
   97                    | MUL_ASSIGN
   98                    | DIV_ASSIGN
   99                    | MOD_ASSIGN
  100                    | ADD_ASSIGN
  101                    | SUB_ASSIGN
  102                    | LEFT_ASSIGN
  103                    | RIGHT_ASSIGN
  104                    | AND_ASSIGN
  105                    | XOR_ASSIGN
  106                    | OR_ASSIGN

  107 expression: assignment_expression

  108 $@33: %empty

  109 expression: expression ',' $@33 assignment_expression

  110 constant_expression: conditional_expression

  111 declaration: declaration_specifiers ';' declarationsubroutine1
  112            | declaration_specifiers init_declarator_list ';' declarationsubroutine2

  113 $@34: %empty

  114 declarationsubroutine1: $@34

  115 declarationsubroutine2: %empty

  116 declaration_specifiers: storage_class_specifier

  117 $@35: %empty

  118 declaration_specifiers: storage_class_specifier $@35 declaration_specifiers
  119                       | type_specifier

  120 $@36: %empty

  121 declaration_specifiers: type_specifier $@36 declaration_specifiers
  122                       | type_qualifier

  123 $@37: %empty

  124 declaration_specifiers: type_qualifier $@37 declaration_specifiers

  125 init_declarator_list: init_declarator

  126 $@38: %empty

  127 init_declarator_list: init_declarator_list ',' $@38 init_declarator

  128 init_declarator: declarator

  129 $@39: %empty

  130 $@40: %empty

  131 init_declarator: declarator $@39 '=' $@40 initializer

  132 storage_class_specifier: TYPEDEF
  133                        | EXTERN
  134                        | STATIC
  135                        | AUTO
  136                        | REGISTER

  137 type_specifier: VOID
  138               | CHAR
  139               | SHORT
  140               | INT
  141               | LONG
  142               | FLOAT
  143               | DOUBLE
  144               | SIGNED
  145               | UNSIGNED
  146               | struct_or_union_specifier
  147               | enum_specifier
  148               | TYPE_NAME

  149 struct_or_union_specifier: struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  150                          | struct_or_union '{' struct_declaration_list '}'
  151                          | struct_or_union IDENTIFIER

  152 struct_or_union: STRUCT
  153                | UNION

  154 struct_declaration_list: struct_declaration
  155                        | struct_declaration_list struct_declaration

  156 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

  157 specifier_qualifier_list: type_specifier specifier_qualifier_list
  158                         | type_specifier
  159                         | type_qualifier specifier_qualifier_list
  160                         | type_qualifier

  161 struct_declarator_list: struct_declarator
  162                       | struct_declarator_list ',' struct_declarator

  163 struct_declarator: declarator
  164                  | ':' constant_expression
  165                  | declarator ':' constant_expression

  166 enum_specifier: ENUM '{' enumerator_list '}'
  167               | ENUM IDENTIFIER '{' enumerator_list '}'
  168               | ENUM '{' enumerator_list ',' '}'
  169               | ENUM IDENTIFIER '{' enumerator_list ',' '}'
  170               | ENUM IDENTIFIER

  171 enumerator_list: enumerator
  172                | enumerator_list ',' enumerator

  173 enumerator: IDENTIFIER
  174           | IDENTIFIER '=' constant_expression

  175 type_qualifier: CONST
  176               | RESTRICT
  177               | VOLATILE

  178 declarator: pointer direct_declarator
  179           | direct_declarator

  180 direct_declarator: IDENTIFIER
  181                  | '(' declarator ')'
  182                  | direct_declarator subroutine4 '[' subroutine5 type_qualifier_list assignment_expression ']' subroutine6
  183                  | direct_declarator subroutine4 '[' subroutine5 type_qualifier_list ']'

  184 $@41: %empty

  185 direct_declarator: direct_declarator subroutine4 '[' assignment_expression $@41 ']'
  186                  | direct_declarator subroutine4 '[' STATIC type_qualifier_list assignment_expression ']'
  187                  | direct_declarator subroutine4 '[' subroutine5 type_qualifier_list STATIC assignment_expression ']'

  188 $@42: %empty

  189 direct_declarator: direct_declarator subroutine4 '[' subroutine5 type_qualifier_list '*' ']' $@42

  190 $@43: %empty

  191 direct_declarator: direct_declarator subroutine4 '[' '*' ']' $@43
  192                  | direct_declarator subroutine4 '[' ']'

  193 $@44: %empty

  194 $@45: %empty

  195 direct_declarator: direct_declarator '(' $@44 parameter_type_list $@45 ')'

  196 $@46: %empty

  197 $@47: %empty

  198 direct_declarator: direct_declarator '(' $@46 identifier_list $@47 ')'

  199 $@48: %empty

  200 direct_declarator: direct_declarator '(' $@48 ')'

  201 subroutine4: %empty

  202 subroutine5: %empty

  203 $@49: %empty

  204 subroutine6: $@49

  205 pointer: '*' subroutine7
  206        | '*' subroutine7 type_qualifier_list
  207        | '*' subroutine7 pointer
  208        | '*' subroutine7 type_qualifier_list pointer

  209 subroutine7: %empty

  210 type_qualifier_list: type_qualifier
  211                    | type_qualifier_list type_qualifier

  212 parameter_type_list: parameter_list
  213                    | parameter_list ',' ELLIPSIS

  214 parameter_list: parameter_declaration

  215 $@50: %empty

  216 parameter_list: parameter_list ',' $@50 parameter_declaration

  217 parameter_declaration: declaration_specifiers declarator
  218                      | declaration_specifiers abstract_declarator
  219                      | declaration_specifiers

  220 identifier_list: IDENTIFIER

  221 $@51: %empty

  222 identifier_list: identifier_list ',' $@51 IDENTIFIER

  223 type_name: specifier_qualifier_list

  224 $@52: %empty

  225 type_name: specifier_qualifier_list $@52 abstract_declarator

  226 abstract_declarator: pointer
  227                    | direct_abstract_declarator
  228                    | pointer direct_abstract_declarator

  229 direct_abstract_declarator: '(' abstract_declarator ')'
  230                           | '(' parameter_type_list ')'

  231 $@53: %empty

  232 direct_abstract_declarator: '(' ')' $@53
  233                           | subroutine3 '[' ']'

  234 $@54: %empty

  235 direct_abstract_declarator: subroutine3 '[' assignment_expression ']' $@54
  236                           | direct_abstract_declarator subroutine2 '[' ']'
  237                           | direct_abstract_declarator subroutine2 '[' assignment_expression ']'

  238 $@55: %empty

  239 direct_abstract_declarator: subroutine3 '[' '*' ']' $@55

  240 $@56: %empty

  241 direct_abstract_declarator: direct_abstract_declarator subroutine2 '[' '*' ']' $@56

  242 $@57: %empty

  243 direct_abstract_declarator: direct_abstract_declarator '(' ')' $@57

  244 $@58: %empty

  245 $@59: %empty

  246 direct_abstract_declarator: direct_abstract_declarator '(' $@58 parameter_type_list $@59 ')'

  247 subroutine2: %empty

  248 subroutine3: %empty

  249 initializer: assignment_expression

  250 $@60: %empty

  251 initializer: subroutine1 '{' initializer_list '}' $@60

  252 $@61: %empty

  253 $@62: %empty

  254 initializer: subroutine1 '{' initializer_list ',' '}' $@61 $@62

  255 subroutine1: %empty

  256 initializer_list: initializer
  257                 | designation initializer
  258                 | initializer_list ',' initializer
  259                 | initializer_list ',' designation initializer

  260 designation: designator_list '='

  261 designator_list: designator
  262                | designator_list designator

  263 designator: '[' constant_expression ']'
  264           | '.' IDENTIFIER

  265 statement: labeled_statement
  266          | compound_statement
  267          | expression_statement
  268          | selection_statement
  269          | iteration_statement
  270          | jump_statement

  271 labeled_statement: IDENTIFIER ':' statement
  272                  | CASE constant_expression ':' statement
  273                  | DEFAULT ':' statement

  274 $@63: %empty

  275 compound_statement: '{' $@63 '}'

  276 $@64: %empty

  277 $@65: %empty

  278 compound_statement: '{' $@64 block_item_list $@65 '}'

  279 block_item_list: block_item
  280                | block_item_list block_item

  281 block_item: declaration
  282           | statement

  283 expression_statement: ';'

  284 $@66: %empty

  285 expression_statement: expression $@66 ';'

  286 $@67: %empty

  287 selection_statement: IF ifsubroutine '(' expression ifsubroutine2 ')' statement ifsubroutine3 ELSE $@67 statement
  288                    | IF ifsubroutine '(' expression ifsubroutine2 ')' statement ifsubroutine3
  289                    | SWITCH '(' expression ')' statement

  290 ifsubroutine: %empty

  291 ifsubroutine2: %empty

  292 ifsubroutine3: %empty

  293 $@68: %empty

  294 $@69: %empty

  295 $@70: %empty

  296 $@71: %empty

  297 iteration_statement: WHILE $@68 '(' $@69 expression $@70 ')' $@71 statement

  298 $@72: %empty

  299 $@73: %empty

  300 $@74: %empty

  301 $@75: %empty

  302 $@76: %empty

  303 iteration_statement: DO $@72 statement WHILE $@73 '(' $@74 expression $@75 ')' $@76 ';'
  304                    | FOR forsubroutine '(' expression_statement forsubroutine2 expression_statement forsubroutine2 ')' forsubroutine5 statement forsubroutine4
  305                    | FOR forsubroutine '(' expression_statement forsubroutine2 expression_statement forsubroutine2 expression forsubroutine3 ')' forsubroutine5 statement forsubroutine4
  306                    | FOR forsubroutine '(' declaration forsubroutine6 expression_statement forsubroutine2 ')' forsubroutine5 statement forsubroutine4
  307                    | FOR forsubroutine '(' declaration forsubroutine6 expression_statement forsubroutine2 expression forsubroutine3 ')' forsubroutine5 statement forsubroutine4

  308 forsubroutine: %empty

  309 forsubroutine2: %empty

  310 forsubroutine3: %empty

  311 forsubroutine4: %empty

  312 forsubroutine5: %empty

  313 forsubroutine6: %empty

  314 jump_statement: GOTO IDENTIFIER ';'

  315 $@77: %empty

  316 jump_statement: CONTINUE $@77 ';'

  317 $@78: %empty

  318 jump_statement: BREAK $@78 ';'

  319 $@79: %empty

  320 jump_statement: RETURN $@79 ';'

  321 $@80: %empty

  322 $@81: %empty

  323 jump_statement: RETURN $@80 expression $@81 ';'

  324 translation_unit: external_declaration
  325                 | translation_unit external_declaration

  326 external_declaration: function_definition
  327                     | declaration

  328 function_definition: declaration_specifiers declarator declaration_list compound_statement
  329                    | declaration_specifiers declarator compound_statement

  330 declaration_list: declaration
  331                 | declaration_list declaration


Terminals, with rules where they appear

$end (0) 0
'!' (33) 41
'%' (37) 50
'&' (38) 36 77
'(' (40) 6 12 15 22 23 34 43 181 195 198 200 229 230 232 243 246 287
    288 289 297 303 304 305 306 307
')' (41) 6 12 15 22 23 34 43 181 195 198 200 229 230 232 243 246 287
    288 289 297 303 304 305 306 307
'*' (42) 37 46 189 191 205 206 207 208 239 241
'+' (43) 38 53
',' (44) 23 26 109 127 162 168 169 172 213 216 222 254 258 259
'-' (45) 39 55
'.' (46) 17 264
'/' (47) 48
':' (58) 91 164 165 271 272 273
';' (59) 111 112 156 283 285 303 314 316 318 320 323
'<' (60) 63
'=' (61) 96 131 174 260
'>' (62) 65
'?' (63) 91
'[' (91) 10 182 183 185 186 187 189 191 192 233 235 236 237 239 241
    263
']' (93) 10 182 183 185 186 187 189 191 192 233 235 236 237 239 241
    263
'^' (94) 80
'{' (123) 22 23 149 150 166 167 168 169 251 254 275 278
'|' (124) 83
'}' (125) 22 23 149 150 166 167 168 169 251 254 275 278
'~' (126) 40
error (256)
STRING_LITERAL (258) 3
IDENTIFIER (259) 1 17 19 149 151 167 169 170 173 174 180 220 222 264
    271 314
CONSTANT (260) 2
SIZEOF (261) 33 34
PTR_OP (262) 19
INC_OP (263) 20 29
DEC_OP (264) 21 31
LEFT_OP (265) 58
RIGHT_OP (266) 60
LE_OP (267) 67
GE_OP (268) 69
EQ_OP (269) 72
NE_OP (270) 74
AND_OP (271) 86
OR_OP (272) 89
MUL_ASSIGN (273) 97
DIV_ASSIGN (274) 98
MOD_ASSIGN (275) 99
ADD_ASSIGN (276) 100
SUB_ASSIGN (277) 101
LEFT_ASSIGN (278) 102
RIGHT_ASSIGN (279) 103
AND_ASSIGN (280) 104
XOR_ASSIGN (281) 105
OR_ASSIGN (282) 106
TYPE_NAME (283) 148
TYPEDEF (284) 132
EXTERN (285) 133
STATIC (286) 134 186 187
AUTO (287) 135
REGISTER (288) 136
INLINE (289)
RESTRICT (290) 176
CHAR (291) 138
SHORT (292) 139
INT (293) 140
LONG (294) 141
SIGNED (295) 144
UNSIGNED (296) 145
FLOAT (297) 142
DOUBLE (298) 143
CONST (299) 175
VOLATILE (300) 177
VOID (301) 137
STRUCT (302) 152
UNION (303) 153
ENUM (304) 166 167 168 169 170
ELLIPSIS (305) 213
CASE (306) 272
DEFAULT (307) 273
IF (308) 287 288
ELSE (309) 287
SWITCH (310) 289
WHILE (311) 297 303
DO (312) 303
FOR (313) 304 305 306 307
GOTO (314) 314
CONTINUE (315) 316
BREAK (316) 318
RETURN (317) 320 323


Nonterminals, with rules where they appear

$accept (87)
    on left: 0
primary_expression (88)
    on left: 1 2 3 6, on right: 7
$@1 (89)
    on left: 4, on right: 6
$@2 (90)
    on left: 5, on right: 6
postfix_expression (91)
    on left: 7 10 12 15 17 19 20 21 22 23, on right: 10 12 15 17 19
    20 21 27
$@3 (92)
    on left: 8, on right: 10
$@4 (93)
    on left: 9, on right: 10
$@5 (94)
    on left: 11, on right: 12
$@6 (95)
    on left: 13, on right: 15
$@7 (96)
    on left: 14, on right: 15
$@8 (97)
    on left: 16, on right: 17
$@9 (98)
    on left: 18, on right: 19
argument_expression_list (99)
    on left: 24 26, on right: 15 26
$@10 (100)
    on left: 25, on right: 26
unary_expression (101)
    on left: 27 29 31 32 33 34, on right: 29 31 33 42 95
$@11 (102)
    on left: 28, on right: 29
$@12 (103)
    on left: 30, on right: 31
subroutine8 (104)
    on left: 35, on right: 33 34
unary_operator (105)
    on left: 36 37 38 39 40 41, on right: 32
cast_expression (106)
    on left: 42 43, on right: 32 43 44 46 48 50
multiplicative_expression (107)
    on left: 44 46 48 50, on right: 46 48 50 51 53 55
$@13 (108)
    on left: 45, on right: 46
$@14 (109)
    on left: 47, on right: 48
$@15 (110)
    on left: 49, on right: 50
additive_expression (111)
    on left: 51 53 55, on right: 53 55 56 58 60
$@16 (112)
    on left: 52, on right: 53
$@17 (113)
    on left: 54, on right: 55
shift_expression (114)
    on left: 56 58 60, on right: 58 60 61 63 65 67 69
$@18 (115)
    on left: 57, on right: 58
$@19 (116)
    on left: 59, on right: 60
relational_expression (117)
    on left: 61 63 65 67 69, on right: 63 65 67 69 70 72 74
$@20 (118)
    on left: 62, on right: 63
$@21 (119)
    on left: 64, on right: 65
$@22 (120)
    on left: 66, on right: 67
$@23 (121)
    on left: 68, on right: 69
equality_expression (122)
    on left: 70 72 74, on right: 72 74 75 77
$@24 (123)
    on left: 71, on right: 72
$@25 (124)
    on left: 73, on right: 74
and_expression (125)
    on left: 75 77, on right: 77 78 80
$@26 (126)
    on left: 76, on right: 77
exclusive_or_expression (127)
    on left: 78 80, on right: 80 81 83
$@27 (128)
    on left: 79, on right: 80
inclusive_or_expression (129)
    on left: 81 83, on right: 83 84 86
$@28 (130)
    on left: 82, on right: 83
logical_and_expression (131)
    on left: 84 86, on right: 86 87 89
$@29 (132)
    on left: 85, on right: 86
logical_or_expression (133)
    on left: 87 89, on right: 89 90 91
$@30 (134)
    on left: 88, on right: 89
conditional_expression (135)
    on left: 90 91, on right: 91 92 110
assignment_expression (136)
    on left: 92 95, on right: 24 26 95 107 109 182 185 186 187 235
    237 249
$@31 (137)
    on left: 93, on right: 95
$@32 (138)
    on left: 94, on right: 95
assignment_operator (139)
    on left: 96 97 98 99 100 101 102 103 104 105 106, on right: 95
expression (140)
    on left: 107 109, on right: 6 10 91 109 285 287 288 289 297 303
    305 307 323
$@33 (141)
    on left: 108, on right: 109
constant_expression (142)
    on left: 110, on right: 164 165 174 263 272
declaration (143)
    on left: 111 112, on right: 281 306 307 327 330 331
declarationsubroutine1 (144)
    on left: 114, on right: 111
$@34 (145)
    on left: 113, on right: 114
declarationsubroutine2 (146)
    on left: 115, on right: 112
declaration_specifiers (147)
    on left: 116 118 119 121 122 124, on right: 111 112 118 121 124
    217 218 219 328 329
$@35 (148)
    on left: 117, on right: 118
$@36 (149)
    on left: 120, on right: 121
$@37 (150)
    on left: 123, on right: 124
init_declarator_list (151)
    on left: 125 127, on right: 112 127
$@38 (152)
    on left: 126, on right: 127
init_declarator (153)
    on left: 128 131, on right: 125 127
$@39 (154)
    on left: 129, on right: 131
$@40 (155)
    on left: 130, on right: 131
storage_class_specifier (156)
    on left: 132 133 134 135 136, on right: 116 118
type_specifier (157)
    on left: 137 138 139 140 141 142 143 144 145 146 147 148, on right:
    119 121 157 158
struct_or_union_specifier (158)
    on left: 149 150 151, on right: 146
struct_or_union (159)
    on left: 152 153, on right: 149 150 151
struct_declaration_list (160)
    on left: 154 155, on right: 149 150 155
struct_declaration (161)
    on left: 156, on right: 154 155
specifier_qualifier_list (162)
    on left: 157 158 159 160, on right: 156 157 159 223 225
struct_declarator_list (163)
    on left: 161 162, on right: 156 162
struct_declarator (164)
    on left: 163 164 165, on right: 161 162
enum_specifier (165)
    on left: 166 167 168 169 170, on right: 147
enumerator_list (166)
    on left: 171 172, on right: 166 167 168 169 172
enumerator (167)
    on left: 173 174, on right: 171 172
type_qualifier (168)
    on left: 175 176 177, on right: 122 124 159 160 210 211
declarator (169)
    on left: 178 179, on right: 128 131 163 165 181 217 328 329
direct_declarator (170)
    on left: 180 181 182 183 185 186 187 189 191 192 195 198 200, on right:
    178 179 182 183 185 186 187 189 191 192 195 198 200
$@41 (171)
    on left: 184, on right: 185
$@42 (172)
    on left: 188, on right: 189
$@43 (173)
    on left: 190, on right: 191
$@44 (174)
    on left: 193, on right: 195
$@45 (175)
    on left: 194, on right: 195
$@46 (176)
    on left: 196, on right: 198
$@47 (177)
    on left: 197, on right: 198
$@48 (178)
    on left: 199, on right: 200
subroutine4 (179)
    on left: 201, on right: 182 183 185 186 187 189 191 192
subroutine5 (180)
    on left: 202, on right: 182 183 187 189
subroutine6 (181)
    on left: 204, on right: 182
$@49 (182)
    on left: 203, on right: 204
pointer (183)
    on left: 205 206 207 208, on right: 178 207 208 226 228
subroutine7 (184)
    on left: 209, on right: 205 206 207 208
type_qualifier_list (185)
    on left: 210 211, on right: 182 183 186 187 189 206 208 211
parameter_type_list (186)
    on left: 212 213, on right: 195 230 246
parameter_list (187)
    on left: 214 216, on right: 212 213 216
$@50 (188)
    on left: 215, on right: 216
parameter_declaration (189)
    on left: 217 218 219, on right: 214 216
identifier_list (190)
    on left: 220 222, on right: 198 222
$@51 (191)
    on left: 221, on right: 222
type_name (192)
    on left: 223 225, on right: 22 23 34 43
$@52 (193)
    on left: 224, on right: 225
abstract_declarator (194)
    on left: 226 227 228, on right: 218 225 229
direct_abstract_declarator (195)
    on left: 229 230 232 233 235 236 237 239 241 243 246, on right:
    227 228 236 237 241 243 246
$@53 (196)
    on left: 231, on right: 232
$@54 (197)
    on left: 234, on right: 235
$@55 (198)
    on left: 238, on right: 239
$@56 (199)
    on left: 240, on right: 241
$@57 (200)
    on left: 242, on right: 243
$@58 (201)
    on left: 244, on right: 246
$@59 (202)
    on left: 245, on right: 246
subroutine2 (203)
    on left: 247, on right: 236 237 241
subroutine3 (204)
    on left: 248, on right: 233 235 239
initializer (205)
    on left: 249 251 254, on right: 131 256 257 258 259
$@60 (206)
    on left: 250, on right: 251
$@61 (207)
    on left: 252, on right: 254
$@62 (208)
    on left: 253, on right: 254
subroutine1 (209)
    on left: 255, on right: 251 254
initializer_list (210)
    on left: 256 257 258 259, on right: 22 23 251 254 258 259
designation (211)
    on left: 260, on right: 257 259
designator_list (212)
    on left: 261 262, on right: 260 262
designator (213)
    on left: 263 264, on right: 261 262
statement (214)
    on left: 265 266 267 268 269 270, on right: 271 272 273 282 287
    288 289 297 303 304 305 306 307
labeled_statement (215)
    on left: 271 272 273, on right: 265
compound_statement (216)
    on left: 275 278, on right: 266 328 329
$@63 (217)
    on left: 274, on right: 275
$@64 (218)
    on left: 276, on right: 278
$@65 (219)
    on left: 277, on right: 278
block_item_list (220)
    on left: 279 280, on right: 278 280
block_item (221)
    on left: 281 282, on right: 279 280
expression_statement (222)
    on left: 283 285, on right: 267 304 305 306 307
$@66 (223)
    on left: 284, on right: 285
selection_statement (224)
    on left: 287 288 289, on right: 268
$@67 (225)
    on left: 286, on right: 287
ifsubroutine (226)
    on left: 290, on right: 287 288
ifsubroutine2 (227)
    on left: 291, on right: 287 288
ifsubroutine3 (228)
    on left: 292, on right: 287 288
iteration_statement (229)
    on left: 297 303 304 305 306 307, on right: 269
$@68 (230)
    on left: 293, on right: 297
$@69 (231)
    on left: 294, on right: 297
$@70 (232)
    on left: 295, on right: 297
$@71 (233)
    on left: 296, on right: 297
$@72 (234)
    on left: 298, on right: 303
$@73 (235)
    on left: 299, on right: 303
$@74 (236)
    on left: 300, on right: 303
$@75 (237)
    on left: 301, on right: 303
$@76 (238)
    on left: 302, on right: 303
forsubroutine (239)
    on left: 308, on right: 304 305 306 307
forsubroutine2 (240)
    on left: 309, on right: 304 305 306 307
forsubroutine3 (241)
    on left: 310, on right: 305 307
forsubroutine4 (242)
    on left: 311, on right: 304 305 306 307
forsubroutine5 (243)
    on left: 312, on right: 304 305 306 307
forsubroutine6 (244)
    on left: 313, on right: 306 307
jump_statement (245)
    on left: 314 316 318 320 323, on right: 270
$@77 (246)
    on left: 315, on right: 316
$@78 (247)
    on left: 317, on right: 318
$@79 (248)
    on left: 319, on right: 320
$@80 (249)
    on left: 321, on right: 323
$@81 (250)
    on left: 322, on right: 323
translation_unit (251)
    on left: 324 325, on right: 0 325
external_declaration (252)
    on left: 326 327, on right: 324 325
function_definition (253)
    on left: 328 329, on right: 326
declaration_list (254)
    on left: 330 331, on right: 328 331


State 0

    0 $accept: . translation_unit $end

    TYPE_NAME  shift, and go to state 1
    TYPEDEF    shift, and go to state 2
    EXTERN     shift, and go to state 3
    STATIC     shift, and go to state 4
    AUTO       shift, and go to state 5
    REGISTER   shift, and go to state 6
    RESTRICT   shift, and go to state 7
    CHAR       shift, and go to state 8
    SHORT      shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    FLOAT      shift, and go to state 14
    DOUBLE     shift, and go to state 15
    CONST      shift, and go to state 16
    VOLATILE   shift, and go to state 17
    VOID       shift, and go to state 18
    STRUCT     shift, and go to state 19
    UNION      shift, and go to state 20
    ENUM       shift, and go to state 21

    declaration                go to state 22
    declaration_specifiers     go to state 23
    storage_class_specifier    go to state 24
    type_specifier             go to state 25
    struct_or_union_specifier  go to state 26
    struct_or_union            go to state 27
    enum_specifier             go to state 28
    type_qualifier             go to state 29
    translation_unit           go to state 30
    external_declaration       go to state 31
    function_definition        go to state 32


State 1

  148 type_specifier: TYPE_NAME .

    $default  reduce using rule 148 (type_specifier)


State 2

  132 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 132 (storage_class_specifier)


State 3

  133 storage_class_specifier: EXTERN .

    $default  reduce using rule 133 (storage_class_specifier)


State 4

  134 storage_class_specifier: STATIC .

    $default  reduce using rule 134 (storage_class_specifier)


State 5

  135 storage_class_specifier: AUTO .

    $default  reduce using rule 135 (storage_class_specifier)


State 6

  136 storage_class_specifier: REGISTER .

    $default  reduce using rule 136 (storage_class_specifier)


State 7

  176 type_qualifier: RESTRICT .

    $default  reduce using rule 176 (type_qualifier)


State 8

  138 type_specifier: CHAR .

    $default  reduce using rule 138 (type_specifier)


State 9

  139 type_specifier: SHORT .

    $default  reduce using rule 139 (type_specifier)


State 10

  140 type_specifier: INT .

    $default  reduce using rule 140 (type_specifier)


State 11

  141 type_specifier: LONG .

    $default  reduce using rule 141 (type_specifier)


State 12

  144 type_specifier: SIGNED .

    $default  reduce using rule 144 (type_specifier)


State 13

  145 type_specifier: UNSIGNED .

    $default  reduce using rule 145 (type_specifier)


State 14

  142 type_specifier: FLOAT .

    $default  reduce using rule 142 (type_specifier)


State 15

  143 type_specifier: DOUBLE .

    $default  reduce using rule 143 (type_specifier)


State 16

  175 type_qualifier: CONST .

    $default  reduce using rule 175 (type_qualifier)


State 17

  177 type_qualifier: VOLATILE .

    $default  reduce using rule 177 (type_qualifier)


State 18

  137 type_specifier: VOID .

    $default  reduce using rule 137 (type_specifier)


State 19

  152 struct_or_union: STRUCT .

    $default  reduce using rule 152 (struct_or_union)


State 20

  153 struct_or_union: UNION .

    $default  reduce using rule 153 (struct_or_union)


State 21

  166 enum_specifier: ENUM . '{' enumerator_list '}'
  167               | ENUM . IDENTIFIER '{' enumerator_list '}'
  168               | ENUM . '{' enumerator_list ',' '}'
  169               | ENUM . IDENTIFIER '{' enumerator_list ',' '}'
  170               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 33
    '{'         shift, and go to state 34


State 22

  327 external_declaration: declaration .

    $default  reduce using rule 327 (external_declaration)


State 23

  111 declaration: declaration_specifiers . ';' declarationsubroutine1
  112            | declaration_specifiers . init_declarator_list ';' declarationsubroutine2
  328 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  329                    | declaration_specifiers . declarator compound_statement

    IDENTIFIER  shift, and go to state 35
    '('         shift, and go to state 36
    '*'         shift, and go to state 37
    ';'         shift, and go to state 38

    init_declarator_list  go to state 39
    init_declarator       go to state 40
    declarator            go to state 41
    direct_declarator     go to state 42
    pointer               go to state 43


State 24

  116 declaration_specifiers: storage_class_specifier .
  118                       | storage_class_specifier . $@35 declaration_specifiers

    IDENTIFIER  reduce using rule 116 (declaration_specifiers)
    '('         reduce using rule 116 (declaration_specifiers)
    ')'         reduce using rule 116 (declaration_specifiers)
    '['         reduce using rule 116 (declaration_specifiers)
    ','         reduce using rule 116 (declaration_specifiers)
    '*'         reduce using rule 116 (declaration_specifiers)
    ';'         reduce using rule 116 (declaration_specifiers)
    $default    reduce using rule 117 ($@35)

    $@35  go to state 44


State 25

  119 declaration_specifiers: type_specifier .
  121                       | type_specifier . $@36 declaration_specifiers

    IDENTIFIER  reduce using rule 119 (declaration_specifiers)
    '('         reduce using rule 119 (declaration_specifiers)
    ')'         reduce using rule 119 (declaration_specifiers)
    '['         reduce using rule 119 (declaration_specifiers)
    ','         reduce using rule 119 (declaration_specifiers)
    '*'         reduce using rule 119 (declaration_specifiers)
    ';'         reduce using rule 119 (declaration_specifiers)
    $default    reduce using rule 120 ($@36)

    $@36  go to state 45


State 26

  146 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 146 (type_specifier)


State 27

  149 struct_or_union_specifier: struct_or_union . IDENTIFIER '{' struct_declaration_list '}'
  150                          | struct_or_union . '{' struct_declaration_list '}'
  151                          | struct_or_union . IDENTIFIER
